SEC-2915: Updated Java Code Formatting